--- a/containers/buildchain/package.json
+++ b/containers/buildchain/package.json
@@ -17,9 +17,11 @@
         "style-loader": "latest",
         "babel-core": "latest",
         "babel-loader": "latest",
-        "babel-preset-stage-2": "^6.22.0",
-        "babel-preset-es2015": "^6.24.1",
-        "babel-preset-es2015-node6": "0.4.0",
-        "extract-text-webpack-plugin": "^2.0.0"
+        "babel-preset-stage-2": "latest",
+        "babel-preset-es2015": "latest",
+        "babel-preset-es2015-node6": "latest",
+        "extract-text-webpack-plugin": "latest",
+        "enzyme": "latest",
+        "ava": "latest"
     }
 }
