--- a/containers/buildchain/package.json
+++ b/containers/buildchain/package.json
@@ -4,7 +4,7 @@
     "description": "Late Rooms code challenge",
     "main": "index.js",
     "scripts": {
-        "start": "webpack-dev-server --open",
+        "start": "webpack-dev-server",
         "test": "ava ./src/tests/*.js"
     },
     "author": "Keir Lavelle",
@@ -18,6 +18,7 @@
         "style-loader": "latest",
         "babel-core": "latest",
         "babel-loader": "latest",
+        "babel-register": "latest",
         "babel-preset-react": "latest",
         "babel-preset-es2015": "latest",
         "enzyme": "latest",
@@ -29,5 +30,12 @@
         "react-redux": "latest",
         "webpack-shell-plugin": "latest",
         "immutable": "latest"
+    },
+    "babel": {
+        "presets": ["es2015", "react"]
+    },
+    "ava": {
+        "babel": "inherit",
+        "require": ["babel-register"]
     }
 }
