added base filters component

--- a/containers/buildchain/package.json
+++ b/containers/buildchain/package.json
@@ -28,6 +28,7 @@
         "react-addons-test-utils": "latest",
         "react-dom": "latest",
         "react-redux": "latest",
+        "rc-slider": "latest",
         "webpack-shell-plugin": "latest",
         "immutable": "latest"
     },
